tests/fail/bad-decorator-duplication.astr
module bad-decorator-duplication

attributes

  // See decorator-duplication.astr

  decorator foo(a) = a

  def foo foo foo bar = id
  
  def foo foo bar = id
